--- a/index.html
+++ b/index.html
@@ -4,26 +4,109 @@
   <meta charset="UTF-8">
   <title>Budget Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f4f6f8; }
-    .container { max-width: 500px; margin: 40px auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px #0001; padding: 24px; }
-    h1 { text-align: center; color: #2b2d42; }
-    form { display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 24px; }
-    form input, form select { flex: 1 1 120px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
-    form button { flex: 1 1 100%; padding: 10px; background: #2b2d42; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
-    form button:hover { background: #41436a; }
-    .summary { display: flex; justify-content: space-between; margin-bottom: 16px; padding: 12px; background: #edf2fb; border-radius: 4px; }
-    .summary div { text-align: center; }
-    .summary strong { display: block; font-size: 1.2em; }
-    ul { list-style: none; padding: 0; margin: 0; }
-    li { background: #f8f9fa; margin-bottom: 8px; padding: 10px; border-radius: 4px; display: flex; justify-content: space-between; align-items: center; }
-    .income { color: #008000; }
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background: linear-gradient(to right, #f8f9fa, #e0e7ff);
+      color: #333;
+    }
+    .container {
+      max-width: 700px;
+      margin: 40px auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 32px;
+      transition: all 0.3s ease;
+    }
+    h1 {
+      text-align: center;
+      color: #2b2d42;
+      font-weight: 600;
+      margin-bottom: 24px;
+    }
+    form, .filters {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      margin-bottom: 24px;
+    }
+    form input, form select, .filters input, .filters select {
+      flex: 1 1 150px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
+    }
+    form button, .filters button {
+      flex: 1 1 100%;
+      padding: 12px;
+      background: #2b2d42;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    form button:hover, .filters button:hover {
+      background: #41436a;
+    }
+    .summary {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 16px;
+      padding: 16px;
+      background: #edf2fb;
+      border-radius: 12px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+    }
+    .summary div {
+      text-align: center;
+      flex: 1;
+    }
+    .summary strong {
+      display: block;
+      font-size: 1.4em;
+      color: #222;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      background: #ffffff;
+      margin-bottom: 12px;
+      padding: 14px 16px;
+      border-radius: 12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    }
+    .income { color: #2f9e44; }
     .expense { color: #d90429; }
-    .item-info { flex: 1; }
-    .delete-btn { background: none; border: none; color: #d90429; font-size: 1.1em; cursor: pointer; }
+    .item-info {
+      flex: 1;
+      font-size: 0.95em;
+    }
+    .delete-btn, .edit-btn {
+      background: none;
+      border: none;
+      font-size: 1.1em;
+      cursor: pointer;
+      margin-left: 8px;
+      padding: 4px;
+      transition: transform 0.2s;
+    }
+    .delete-btn:hover { color: #e03131; transform: scale(1.1); }
+    .edit-btn:hover { color: #1c7ed6; transform: scale(1.1); }
     @media (max-width: 600px) {
-      .container { padding: 12px; }
-      form { flex-direction: column; }
+      .container { padding: 20px; }
+      form, .filters { flex-direction: column; }
     }
   </style>
 </head>
@@ -31,6 +114,7 @@
   <div class="container">
     <h1>Budget Tracker</h1>
     <form id="item-form">
+      <input type="date" id="date" required>
       <select id="type">
         <option value="income">Income</option>
         <option value="expense">Expense</option>
@@ -56,83 +140,5 @@
     </div>
     <ul id="items-list"></ul>
   </div>
-  <script>
-    // Helper: format number as GBP
-    function formatGBP(num) {
-      return '£' + Number(num).toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2});
-    }
-
-    // LocalStorage key
-    const STORAGE_KEY = 'budget_items_v1';
-
-    // Load items from localStorage or empty array
-    function loadItems() {
-      try {
-        return JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
-      } catch {
-        return [];
-      }
-    }
-
-    // Save items to localStorage
-    function saveItems(items) {
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(items));
-    }
-
-    // Render summary and list
-    function render() {
-      const items = loadItems();
-      let income = 0, expense = 0;
-      const list = document.getElementById('items-list');
-      list.innerHTML = '';
-      items.forEach((item, idx) => {
-        if (item.type === 'income') income += Number(item.amount);
-        else expense += Number(item.amount);
-
-        const li = document.createElement('li');
-        li.className = item.type;
-        li.innerHTML = `
-          <span class="item-info">
-            <b>${item.type === 'income' ? '+' : '-'}${formatGBP(item.amount)}</b>
-            [${item.category}] - ${item.description || '(No description)'}
-          </span>
-          <button class="delete-btn" title="Delete" data-idx="${idx}">&times;</button>
-        `;
-        list.appendChild(li);
-      });
-      document.getElementById('total-income').textContent = formatGBP(income);
-      document.getElementById('total-expense').textContent = formatGBP(expense);
-      document.getElementById('balance').textContent = formatGBP(income - expense);
-    }
-
-    // Add item handler
-    document.getElementById('item-form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const type = document.getElementById('type').value;
-      const amount = parseFloat(document.getElementById('amount').value);
-      const category = document.getElementById('category').value.trim();
-      const description = document.getElementById('description').value.trim();
-      if (!amount || amount <= 0 || !category) return;
-      const items = loadItems();
-      items.push({ type, amount, category, description });
-      saveItems(items);
-      this.reset();
-      render();
-    });
-
-    // Delete item handler (event delegation)
-    document.getElementById('items-list').addEventListener('click', function(e) {
-      if (e.target.classList.contains('delete-btn')) {
-        const idx = e.target.getAttribute('data-idx');
-        const items = loadItems();
-        items.splice(idx, 1);
-        saveItems(items);
-        render();
-      }
-    });
-
-    // Initial render
-    render();
-  </script>
 </body>
 </html>
